[package]
name = "imgttyview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.11"
colored = "2.1.0"
crossterm = "0.27.0"
image = "0.24.7"
itertools = "0.12.0"
ratatui = "0.24.0"
thiserror = "1.0.50"
